<?xml version="1.0" encoding="utf-8"?>
<navigation
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/navigation_main"
    app:startDestination="@id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.sasha.lampwiz.activity.main.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />
    <fragment
        android:id="@+id/nav_color"
        android:name="com.sasha.lampwiz.activity.main.ui.color.ColorFragment"
        android:label="@string/menu_color"
        tools:layout="@layout/fragment_color" />
    <fragment
        android:id="@+id/nav_device"
        android:name="com.sasha.lampwiz.activity.main.ui.device.DeviceFragment"
        android:label="@string/menu_device"
        tools:layout="@layout/fragment_device" />
    <fragment
        android:id="@+id/nav_history"
        android:name="com.sasha.lampwiz.activity.main.ui.history.ConnectionHistoryFragment"
        android:label="Connection History"
        tools:layout="@layout/fragment_connection_history" />


</navigation>
